--- a/public/manifest.json
+++ b/public/manifest.json
@@ -33,5 +33,5 @@
     }
   ],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
-  "web_accessible_resources": ["index.html", "/static/*"]
+  "web_accessible_resources": ["index.html", "/static/*", "finder.js"]
 }
