--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.1",
+    "@chakra-ui/react": "^1.0.1",
+    "@emotion/css": "^11.0.0",
     "@emotion/react": "^11.1.1",
+    "@emotion/server": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
@@ -11,14 +16,20 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "framer-motion": "^2.9.4",
+    "prettier": "^2.2.0",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-draggable": "^4.4.3",
     "react-icons": "^3.0.0",
     "react-resizable": "^1.11.0",
     "react-scripts": "4.0.0",
+    "react-shadow": "^18.6.1",
+    "source-map-explorer": "^2.5.0",
     "tailwindcss": "^2.0.1",
     "typescript": "^3.9.5",
+    "use-debounce": "^5.1.0",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.2"
   },
@@ -26,7 +37,8 @@
     "start": "react-scripts start",
     "build": "cross-env INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/uuid": "^8.3.0",
     "cross-env": "^7.0.2",
     "customize-cra": "^1.0.0",
