--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.1.1",
     "@emotion/server": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@medv/finder": "^2.0.0",
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
