--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "cross-env INLINE_RUNTIME_CHUNK=false react-scripts build",
+    "build": "npm run lint && cross-env INLINE_RUNTIME_CHUNK=false react-scripts build",
     "watch": "node scripts/watch.js",
     "lint": "eslint --fix --no-error-on-unmatched-pattern -c ./.eslintrc.js \"**/*.ts*\"",
     "test": "react-scripts test",
