--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start": "react-scripts start",
     "build": "yarn lint && cross-env INLINE_RUNTIME_CHUNK=false react-scripts build",
     "watch": "node scripts/watch.js",
-    "lint": "eslint --fix --no-error-on-unmatched-pattern -c ./.eslintrc.js \"**/*.ts*\"",
+    "lint": "eslint --fix --no-error-on-unmatched-pattern -c ./.eslintrc.js \"**/*.ts*\" \"./public/content.js\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
