Add jotai & simplify node selection commands

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
     "framer-motion": "^2.9.4",
+    "jotai": "^0.14.4",
     "prettier": "^2.2.0",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.2",
@@ -50,8 +51,8 @@
     "@types/jest": "^25.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
     "@types/react-copy-to-clipboard": "^4.3.0",
+    "@types/react-dom": "^16.9.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
