--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jotai": "^0.14.4",
     "prettier": "^2.2.0",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-icons": "^3.0.0",
@@ -51,6 +52,7 @@
     "@types/jest": "^25.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.0",
     "@types/uuid": "^8.3.0",
