--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.5",
     "react-icons": "^3.0.0",
     "react-scripts": "4.0.0",
     "typescript": "^3.9.5",
